@@ -6,6 +6,7 @@
       <key>/schemas/desktop/gnome/url-handlers/default-show</key>
       <owner>gnome</owner>
       <type>string</type>
+      <default>mozilla "%s"</default>
       <locale name="C">
         <short>Default URL show handler</short>
         <long>Default URL show handler</long>
@@ -16,6 +17,7 @@
       <key>/schemas/desktop/gnome/url-handlers/info-show</key>
       <owner>gnome</owner>
       <type>string</type>
+      <default>gnome-help "%s"</default>
       <locale name="C">
         <short>URL handler for info pages</short>
         <long>URL handler for info pages</long>
@@ -26,6 +28,7 @@
       <key>/schemas/desktop/gnome/url-handlers/man-show</key>
       <owner>gnome</owner>
       <type>string</type>
+      <default>gnome-help "%s"</default>
       <locale name="C">
         <short>URL handler for man pages</short>
         <long>URL handler for man pages</long>
@@ -36,6 +39,7 @@
       <key>/schemas/desktop/gnome/url-handlers/ghelp-show</key>
       <owner>gnome</owner>
       <type>string</type>
+      <default>gnome-help "%s"</default>
       <locale name="C">
         <short>URL handler for gnome help pages</short>
         <long>URL handler for gnome help pages</long>
