@@ -1,3 +1,13 @@
+2002-03-19  Mikael Hallendal  <micke@codefactory.se>
+
+	* schemas/desktop_gnome_url_handlers.schemas: set the default url
+          handlers in the schema file instead of in the code.
+
+	* libgnome/gnome-url.c: 
+	(gnome_url_default_handler): removed, left over from gnome-config.
+	(gnome_url_show): get the default handler from gconf every time,
+	  #71632
+
 2002-03-18 John Fleck <jfleck@inkstain.net>
 
 	* configure.in, help-converters/docbook/Makefile.am
